<resources>
    <string name="app_name">Fackla</string>

    <string name="fake_location_channel_id" translatable="false">fake_location</string>
    <string name="fake_location_channel_name">Fake Location</string>
    <string name="fake_location_channel_description">Allows you to use a fake location in all apps.</string>

    <string name="fake_location_notification_title">Fake Location</string>
    <string name="fake_location_notification_description">You’re using a fake location in all apps.</string>
    <string name="fake_location_notification_action_title">Stop faking location</string>

    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoicGhvcWUiLCJhIjoiY2tua2V1dm1rMGFnODJ1bzA4aDAzbzVjNiJ9.qhP4X_XpdzIPsHawKbJAKQ</string>
    <string name="on_explanation_needed_toast_text">Allow access to show your location on the map.</string>
    <string name="on_permission_result_not_granted_toast_text">Your location will not be shown.</string>
    <string name="efab_stop_faking_location_text">Stop Faking Location</string>
    <string name="empty_state_illustration_content_description">Illustration</string>

    <string name="onboarding_intro_screen_title">Stop Work From Tracking You</string>
    <string name="onboarding_intro_screen_body">Prevent your workplace from tracking you by changing your virtual location to anywhere you like. Sit back and relax at a café while you’re appearing to work from the office.</string>
    <string name="onboarding_intro_button">Get Started</string>

    <string name="onboarding_developer_mode_title">Turn on Developer Mode</string>
    <string name="onboarding_developer_mode_body">Changing your location with Fackla requires turning on Developer Mode on your device. Tap “Become a Developer…” then find and tap Build Number seven times.</string>
    <string name="onboarding_developer_mode_button">Become a Developer…</string>
    <string name="onboarding_developer_mode_caption">It’s usually under Software Information unless otherwise specified.</string>

    <string name="onboarding_mock_location_title">Select Mock Location App</string>
    <string name="onboarding_mock_location_body">With Developer Mode turned on, you need to select Fackla as your mock location app. Tap “Select App…” and select Fackla as your mock location app.</string>
    <string name="onboarding_mock_location_button">Select App…</string>
    <string name="onboarding_mock_location_caption">Depending on your device, you may have to search or scroll for the option.</string>

    <string name="onboarding_location_permission_title">Permission to Access Your Location</string>
    <string name="onboarding_location_permission_body">Your location is needed to show your position on a map and fake your location for other apps. Fackla cannot function without access to your location.</string>
    <string name="onboarding_location_permission_button">Review Permission…</string>
    <string name="onboarding_location_permission_caption">Your location data is not sent to Fackla, it stays on your device.</string>

    <string name="onboarding_end_title">Tap and Hold the Map</string>
    <string name="onboarding_end_body">You can change your location by tapping and holding a point on the map. When you’re done, tap “Stop Faking Location” to reset your location.</string>
    <string name="onboarding_end_button">Start Using Fackla</string>

    <string name="onboarding_location_permission_dialog_title">Location access required</string>
    <string name="onboarding_location_permission_dialog_message">Access to your location is required for Fackla to function. Tap Manage then Permissions and allow Fackla to read your location.\n\nIf you don’t want to allow Fackla to read your location, do not use this app.</string>
    <string name="onboarding_location_permission_dialog_negative_button">Cancel</string>
    <string name="onboarding_location_permission_dialog_positive_button">Manage</string>

    <string name="main_no_mock_location_app_snackbar_text">Select Fackla as your mock location app.</string>
    <string name="main_no_mock_location_app_snackbar_action">Manage</string>

    <string name="main_no_perms_snackbar_text">Allow Fackla to access your location to change your location.</string>
    <string name="main_no_perms_snackbar_action">Manage</string>

    <string name="main_no_mock_loc_app_dialog_title">Select mock location app</string>
    <string name="main_no_mock_loc_app_message">With Developer Mode turned on, you need to select Fackla as your mock location app. Tap Manage and select Fackla as your mock location app.</string>
    <string name="main_no_loc_app_positive_button">Manage</string>
    <string name="main_no_loc_app_negative_button">Cancel</string>

    <string name="main_no_perms_dialog_title">Location access required</string>
    <string name="main_no_perms_dialog_message">Access to your location is required for Fackla to function. Tap Manage then Permissions and allow Fackla to read your location.\n\nIf you don’t want to allow Fackla to read your location, do not use this app.</string>
    <string name="main_no_perms_dialog_positive_button">Manage</string>
    <string name="main_no_perms_dialog_negative_button">Cancel</string>

    <string name="main_dev_mode_dialog_title">Turn on Developer Mode</string>
    <string name="main_dev_mode_dialog_message">Changing your location with Fackla requires turning on Developer Mode on your device. Tap Manage then find and tap Build Number seven times.</string>
    <string name="main_dev_mode_dialog_negative_button">Cancel</string>
    <string name="main_dev_mode_dialog_positive_button">Manage</string>
    <string name="onboarding_intro_empty_state_content_desc">A person next to a map with a highlighted location.</string>
    <string name="onboarding_developer_mode_empty_state_content_desc">A woman changing options in a list.</string>
    <string name="onboarding_end_empty_state_content_desc">A map with a highlighted location.</string>
    <string name="onboarding_location_permission_empty_state_content_desc">A girl sitting on top of a highlighted location on a map.</string>
    <string name="onboarding_mock_location_content_desc">A woman next to a phone containing a map with a highlighted location.</string>
</resources>