<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_marginBottom="32dp"
        tools:contentDescription="Version Control Illustration"
        tools:ignore="ContentDescription"
        tools:src="@drawable/ic_undraw_version_control" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            tools:text="Stop your work from tracking you" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                tools:text="With Fackla you can fake your location and secure your privacy. With Fackla you can fake your location and secure your privacy." />
        </ScrollView>
    </LinearLayout>
</LinearLayout>