<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="24dp"
    android:orientation="vertical">

    <com.phoqe.fackla.components.EmptyState
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        app:illustration="@drawable/ic_undraw_my_current_location"
        app:title="@string/onboarding_loc_perm_screen_title"
        app:body="@string/onboarding_loc_perm_screen_body" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_review_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_loc_perm_screen_button_text" />

</LinearLayout>