<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingTop="24dp">

    <com.phoqe.material_foundation.EmptyState
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:body="@string/onboarding_end_body"
        app:image="@drawable/ic_undraw_map"
        app:image_cd="@string/onboarding_end_empty_state_content_desc"
        app:title="@string/onboarding_end_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/onboarding_end_button" />
</LinearLayout>